--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "collectCoverage": true
   },
   "dependencies": {
-    "acorn": "^5.7.2",
-    "fs-extra": "^7.0.0"
+    "fs-extra": "^7.0.0",
+    "js-yaml": "^3.12.0"
   },
   "devDependencies": {
     "codecov": "latest",
