--- a/package.json
+++ b/package.json
@@ -37,18 +37,18 @@
     "js-yaml": "^3.12.0"
   },
   "devDependencies": {
-    "codecov": "latest",
-    "eslint": "latest",
-    "eslint-config-standard": "latest",
-    "eslint-plugin-import": "latest",
-    "eslint-plugin-jest": "latest",
-    "eslint-plugin-node": "latest",
-    "eslint-plugin-promise": "latest",
-    "eslint-plugin-standard": "latest",
-    "eslint-plugin-vue": "latest",
-    "jest": "latest",
-    "jsdom": "latest",
-    "nuxt-edge": "latest",
-    "standard-version": "latest"
+    "codecov": "^3.2.0",
+    "eslint": "^5.13.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jest": "^22.3.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^5.2.1",
+    "jest": "^24.1.0",
+    "jsdom": "^13.2.0",
+    "nuxt-edge": "^2.5.0-25836489.9f3c175b",
+    "standard-version": "^5.0.0"
   }
 }
