--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "js-yaml": "^3.12.0"
   },
   "devDependencies": {
+    "@nuxtjs/eslint-config": "^0.0.1",
+    "babel-eslint": "^10.0.1",
     "codecov": "^3.2.0",
     "eslint": "^5.13.0",
     "eslint-config-standard": "^12.0.0",
