--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "dev": "nuxt test/fixture",
     "lint": "eslint lib test",
-    "test": "npm run lint && jest",
+    "test": "nuxt-edge build test/fixture && npm run lint && jest",
     "release": "standard-version && git push --follow-tags && npm publish"
   },
   "eslintIgnore": [
@@ -50,7 +50,7 @@
     "eslint-plugin-vue": "^5.2.2",
     "jest": "^24.5.0",
     "jsdom": "^14.0.0",
-    "nuxt-edge": "^2.5.0-25874561.ff93d14b",
+    "nuxt-edge": "^3.0.0-25879692.a6a1ff68",
     "standard-version": "^5.0.1"
   }
 }
