--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "dev": "nuxt test/fixture",
     "lint": "eslint lib test",
-    "test": "nuxt-edge build test/fixture && npm run lint && jest",
+    "test": "nuxt-edge build test/fixture --no-lock && npm run lint && jest",
     "release": "standard-version && git push --follow-tags && npm publish"
   },
   "eslintIgnore": [
@@ -39,6 +39,8 @@
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
     "babel-eslint": "^10.0.1",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.14",
     "codecov": "^3.2.0",
     "eslint": "^5.15.2",
     "eslint-config-standard": "^12.0.0",
