--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nuxtjs/router-extras",
-  "version": "0.1.0-beta.0",
+  "version": "0.1.0",
   "description": "Extra Add-ons for nuxt router",
   "license": "MIT",
   "contributors": [
